--- a/src/ThankYouPage/HerbstStandUp/index.html
+++ b/src/ThankYouPage/HerbstStandUp/index.html
@@ -238,6 +238,7 @@
     window.INVITATION_CONFIG = {
         eventName: 'Осінній Стендап',
         eventDate: '3 листопада',
+        eventDateISO: '2025-11-03',
         time: '19:00',
         city: 'Кьольні',
         paymentUrl: 'https://secure.wayforpay.com/payment/herbstcologne',
