--- a/src/ThankYouPage/WinterStandUp/index.html
+++ b/src/ThankYouPage/WinterStandUp/index.html
@@ -237,6 +237,7 @@
     window.INVITATION_CONFIG = {
         eventName: 'Зимовий Стендап',
         eventDate: '15 грудня',
+        eventDateISO: '2025-12-15',
         time: '19:30',
         city: 'Кельні',
         paymentUrl: 'https://secure.wayforpay.com/payment/winterstandup',
